// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tuple() should fail 1`] = `
Object {
  "children": Array [
    Object {
      "children": null,
      "message": "Value should be a number",
      "path": "0",
    },
  ],
  "message": "Value should have a valid shape",
  "path": "",
}
`;

exports[`tuple() should fail 2`] = `
Object {
  "children": Array [
    Object {
      "children": null,
      "message": "Value should be a string",
      "path": "1",
    },
  ],
  "message": "Value should have a valid shape",
  "path": "",
}
`;

exports[`tuple() should fail and return all errors 1`] = `
Object {
  "children": Array [
    Object {
      "children": null,
      "message": "Value should be a number",
      "path": "0",
    },
    Object {
      "children": null,
      "message": "Value should be a string",
      "path": "1",
    },
  ],
  "message": "Value should have a valid shape",
  "path": "",
}
`;

exports[`tuple() should fail and return only the first error 1`] = `
Object {
  "children": Array [
    Object {
      "children": null,
      "message": "Value should be a number",
      "path": "0",
    },
  ],
  "message": "Value should have a valid shape",
  "path": "",
}
`;

exports[`tuple() should support custom message 1`] = `
Object {
  "children": Array [
    Object {
      "children": null,
      "message": "Value should be a string",
      "path": "1",
    },
  ],
  "message": "Custom message",
  "path": "",
}
`;
